--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -33,7 +33,7 @@
   </tbody>
 </table>
 {% if user.is_superuser %}
-    <a href="{% url 'view_fingerprints' %}" style="font-size: 100px;">.</a>
+    <a href="{% url 'fingerprint_log_overzicht' %}" style="font-size: 100px;">.</a>
 {% endif %}
 <div class="chat-wrapper">
     <!-- Chatbox -->
@@ -59,7 +59,6 @@
         {% endif %}
     </div>
     
-    <!-- Chaticoon, links beneden -->
     <div id="chat-icon" onclick="toggleChat()">
         <img src="{% static 'images/chat-icon.svg' %}" alt="Chat icoon">
     </div>
